# structful

./: Cargo.toml
src/: lib.rs  tests.rs
structful_derive/: Cargo.toml
structful_derive/src/: get.rs  helpers.rs  lib.rs  put.rs
