[package]
name = "structful"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["full"] }
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
structful_derive = { path = "structful_derive" }

[dev-dependencies]
serde_json = "1.0.149"
